--- a/index.html
+++ b/index.html
@@ -54,34 +54,34 @@
             </div>
         </section>
         <section class="random-images">
-            <div class="image-container"><img
+            <div class="image-container img1"><img
                     src="https://media.missguided.com/s/missguided/DE927641_set/1/black-square-neck-raw-edge-ribbed-midaxi-dress"
                     alt=""></div>
-            <div class="image-container"><img
+            <div class="image-container img2"><img
                     src="https://media.missguided.com/s/missguided/DE927641_set/1/black-square-neck-raw-edge-ribbed-midaxi-dress"
                     alt=""></div>
-            <div class="image-container"><img
+            <div class="image-container img3"><img
                     src="https://media.missguided.com/s/missguided/DE927641_set/1/black-square-neck-raw-edge-ribbed-midaxi-dress"
                     alt=""></div>
-            <div class="image-container"><img
+            <div class="image-container img4"><img
                     src="https://media.missguided.com/s/missguided/DE927641_set/1/black-square-neck-raw-edge-ribbed-midaxi-dress"
                     alt=""></div>
-            <div class="image-container"><img
+            <div class="image-container img5"><img
                     src="https://media.missguided.com/s/missguided/DE927641_set/1/black-square-neck-raw-edge-ribbed-midaxi-dress"
                     alt=""></div>
-            <div class="image-container"><img
+            <div class="image-container img6"><img
                     src="https://media.missguided.com/s/missguided/DE927641_set/1/black-square-neck-raw-edge-ribbed-midaxi-dress"
                     alt=""></div>
-            <div class="image-container"><img
+            <div class="image-container img7"><img
                     src="https://media.missguided.com/s/missguided/DE927641_set/1/black-square-neck-raw-edge-ribbed-midaxi-dress"
                     alt=""></div>
-            <div class="image-container"><img
+            <div class="image-container img8"><img
                     src="https://media.missguided.com/s/missguided/DE927641_set/1/black-square-neck-raw-edge-ribbed-midaxi-dress"
                     alt=""></div>
-            <div class="image-container"><img
+            <div class="image-container img9"><img
                     src="https://media.missguided.com/s/missguided/DE927641_set/1/black-square-neck-raw-edge-ribbed-midaxi-dress"
                     alt=""></div>
-            <div class="image-container"><img
+            <div class="image-container img10"><img
                     src="https://media.missguided.com/s/missguided/DE927641_set/1/black-square-neck-raw-edge-ribbed-midaxi-dress"
                     alt=""></div>
         </section>
